--- a/Blog-integration/Info.plist
+++ b/Blog-integration/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>GitTag</key>
-	<string>0.1.2</string>
+	<string>0.1.2-1-g96c73be</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
