--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ xcode_project: Blog-integration.xcworkspace
 xcode_scheme: Blog-integration
 
 script:
-    - xcodebuild clean build -sdk iphonesimulator -workspace Blog-integration.xcworkspace -scheme Blog-integration CODE_SIGNING_REQUIRED=NO
+    - travis_retry xcodebuild clean build -sdk iphonesimulator -workspace Blog-integration.xcworkspace -scheme Blog-integration CODE_SIGNING_REQUIRED=NO
