Try to reduce log size with xcpretty to workaround "The log length has exceeded the limit of 4 MB"

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ osx_image: xcode9.2
 xcode_project: Blog-integration.xcworkspace
 xcode_scheme: Blog-integration
 
+before_install:
+- gem install xcpretty -N --no-ri --no-rdoc
+
 script:
-    - travis_retry xcodebuild clean build -sdk iphonesimulator -workspace Blog-integration.xcworkspace -scheme Blog-integration CODE_SIGNING_REQUIRED=NO
+    - travis_retry xcodebuild clean build -sdk iphonesimulator -workspace Blog-integration.xcworkspace -scheme Blog-integration CODE_SIGNING_REQUIRED=NO | xcpretty
